; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt3sas/extr_mpt3sas_transport.c__transport_add_phy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt3sas/extr_mpt3sas_transport.c__transport_add_phy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPT3SAS_ADAPTER = type { i32 }
%struct._sas_port = type { i32, i32, i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct._sas_phy = type { i32, %struct.TYPE_4__*, i32, i32 }
%struct.TYPE_4__ = type { i32 }

@KERN_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"add: sas_addr(0x%016llx), phy(%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.MPT3SAS_ADAPTER*, %struct._sas_port*, %struct._sas_phy*)* @_transport_add_phy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_transport_add_phy(%struct.MPT3SAS_ADAPTER* %0, %struct._sas_port* %1, %struct._sas_phy* %2) #0 {
  %4 = alloca %struct.MPT3SAS_ADAPTER*, align 8
  %5 = alloca %struct._sas_port*, align 8
  %6 = alloca %struct._sas_phy*, align 8
  %7 = alloca i64, align 8
  store %struct.MPT3SAS_ADAPTER* %0, %struct.MPT3SAS_ADAPTER** %4, align 8
  store %struct._sas_port* %1, %struct._sas_port** %5, align 8
  store %struct._sas_phy* %2, %struct._sas_phy** %6, align 8
  %8 = load %struct._sas_port*, %struct._sas_port** %5, align 8
  %9 = getelementptr inbounds %struct._sas_port, %struct._sas_port* %8, i32 0, i32 3
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %7, align 8
  %12 = load i32, i32* @KERN_INFO, align 4
  %13 = load %struct._sas_phy*, %struct._sas_phy** %6, align 8
  %14 = getelementptr inbounds %struct._sas_phy, %struct._sas_phy* %13, i32 0, i32 1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %7, align 8
  %18 = load %struct._sas_phy*, %struct._sas_phy** %6, align 8
  %19 = getelementptr inbounds %struct._sas_phy, %struct._sas_phy* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @dev_printk(i32 %12, i32* %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %17, i32 %20)
  %22 = load %struct._sas_phy*, %struct._sas_phy** %6, align 8
  %23 = getelementptr inbounds %struct._sas_phy, %struct._sas_phy* %22, i32 0, i32 2
  %24 = load %struct._sas_port*, %struct._sas_port** %5, align 8
  %25 = getelementptr inbounds %struct._sas_port, %struct._sas_port* %24, i32 0, i32 2
  %26 = call i32 @list_add_tail(i32* %23, i32* %25)
  %27 = load %struct._sas_port*, %struct._sas_port** %5, align 8
  %28 = getelementptr inbounds %struct._sas_port, %struct._sas_port* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %28, align 4
  %31 = load %struct._sas_port*, %struct._sas_port** %5, align 8
  %32 = getelementptr inbounds %struct._sas_port, %struct._sas_port* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load %struct._sas_phy*, %struct._sas_phy** %6, align 8
  %35 = getelementptr inbounds %struct._sas_phy, %struct._sas_phy* %34, i32 0, i32 1
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = call i32 @sas_port_add_phy(i32 %33, %struct.TYPE_4__* %36)
  %38 = load %struct._sas_phy*, %struct._sas_phy** %6, align 8
  %39 = getelementptr inbounds %struct._sas_phy, %struct._sas_phy* %38, i32 0, i32 0
  store i32 1, i32* %39, align 8
  ret void
}

declare dso_local i32 @dev_printk(i32, i32*, i8*, i64, i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @sas_port_add_phy(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
